# passthru-libos

./: LICENSE  README.md  rules.cmake
glibc/: .gitignore  CMakeLists.txt  glibc-2.27.cmake
glibc/glibc-patches/: glibc-2.27-debug.patch  glibc-2.27.patch  syscall-trap.patch
libos-c/: CMakeLists.txt  api.h  asm-offsets.h  bpf-helper.c  bpf-helper.h  dl-machine-x86_64.h  do-rel.h  dynamic_link.h  elf-x86_64.h  filter.c  ghcb.h  printf.c  shim.lds  shim.map  shim_debug.c  shim_defs.h  shim_init.c  shim_loader.c  shim_loader.h  shim_passthru.h  shim_rtld.c  shim_syscalls.c  shim_syscalls.h  shim_table.c  shim_table.h  shim_trampoline.c  shim_trampoline.h  shim_types.h  syscall_arch.h  syscall_trap.S  sysdep-x86_64.h
libos-c/string/: memcmp.c  memcpy.c  wordcopy.c
libos-c/sysdeps/generic/: memcopy.h
tests/: Makefile  syscall.c
